--- a/src/enhanced-checkbox-list.less
+++ b/src/enhanced-checkbox-list.less
@@ -66,7 +66,7 @@
     }
 
     &__toggle,
-    &__wrapper {
+    &__list-wrapper {
         .input-style();
         display: block;
         width: 100%;
@@ -111,11 +111,11 @@
         }
     }
 
-    &__toggle + &__wrapper {
+    &__toggle + &__list-wrapper {
         margin-top: 0;
     }
 
-    &__wrapper {
+    &__list-wrapper {
         height: auto;
 
         &[hidden] {
@@ -185,6 +185,20 @@
                 }
             }
         }
+    }
+
+    &__wrapper--auto-close {
+        position: relative;
+    }
+
+    &__wrapper--auto-close &__list-wrapper {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        box-sizing: border-box;
+        margin-top: 3px;
+        background-color: #fff;
     }
 
     &__filter {
